Improved game release and game custom logic
